--- a/execution-summary/ExecutionSummaryReport_25-04-2024_01-05-42-0373-AM.html
+++ b/execution-summary/ExecutionSummaryReport_25-04-2024_01-05-42-0373-AM.html
@@ -28,8 +28,8 @@
                     height: 220px;
                     border-radius: 50%;
                     background-image: conic-gradient(
-                        MediumSeaGreen 0.00% 100.0%,
-                        Tomato 100.0% 100.0%,
+                        MediumSeaGreen 0.00% 0.0%,
+                        Tomato 0.0% 100.0%,
                         Orange 100.0%);
                 }
                 .piechart1 {
@@ -40,7 +40,7 @@
                      border-radius: 50%;
                      margin-top: 20px;
                      background-image: conic-gradient(
-                        MediumSeaGreen 360.0deg,
+                        MediumSeaGreen 0.0deg,
                         Tomato 0);
                 }
                 #logo{
@@ -259,29 +259,29 @@
     <h1>Execution Summary Report</h1>
     <br>
     <div class="content">
-        <h2 style="clear:both; padding-top: 15px; margin-bottom: 3px">24/04/2024</h2>
-        <h5 style="clear:both; color:Grey">19:55:02 - 19:55:18 (16 sec, 101 millis) </h5>
+        <h2 style="clear:both; padding-top: 15px; margin-bottom: 3px">25/04/2024</h2>
+        <h5 style="clear:both; color:Grey">01:03:51 - 01:05:42 (01 min, 50 sec) </h5>
         <br>
         <div style="border: 1px solid Grey" class="piechart"></div>
         <br>
-        <h2>100.00% Passed</h2>
+        <h2>0.00% Passed</h2>
         <br><br>
         <h3><b>Total Test Cases</b>:&nbsp1&nbsp&nbsp[
-            <font style="color:MediumSeaGreen;"><b>Passed:</b>&nbsp1</font>&nbsp|
-            <font style="color:Tomato;"><b>Failed:</b>&nbsp0</font>&nbsp|
+            <font style="color:MediumSeaGreen;"><b>Passed:</b>&nbsp0</font>&nbsp|
+            <font style="color:Tomato;"><b>Failed:</b>&nbsp1</font>&nbsp|
             <font style="color:Orange;"><b>Skipped:</b>&nbsp0</font>&nbsp]
         </h3>
         <br>
         <hr class="rounded1">
          <h4><b title="&#9432; Validations is the number of executed assertions and verifications that the executed test cases have, as a test case could have many validations. (excluding skipped tests and validations)">&#9432; </b><b>Total Executed Validations</b>:&nbsp1&nbsp&nbsp[
-            <font style="color:MediumSeaGreen;"><b>Passed:</b>&nbsp1</font>&nbsp|
-            <font style="color:Tomato;"><b>Failed:</b>&nbsp0</font>&nbsp]
+            <font style="color:MediumSeaGreen;"><b>Passed:</b>&nbsp0</font>&nbsp|
+            <font style="color:Tomato;"><b>Failed:</b>&nbsp1</font>&nbsp]
         </h4>
         <div class="piechart1"></div>
-        <h5 style="padding-top: 5px;">100.00% Passed</h5>
+        <h5 style="padding-top: 5px;">0.00% Passed</h5>
         <hr class="rounded1">
-        <h5><b title="&#9432; Issues are problems that may relate to the tests and should be investigated further to open or close bugs; Issues are divided between the three following categories. (directly related to the @Issue annotation)">&#9432; </b><b>Total Issues</b>:&nbsp0&nbsp&nbsp[
-            <font style="color:Tomato;"><b title="&#9432; Defining the Failed tests that are not linked to bugs. (need to investigate and if needed, open new bugs and link them to the related tests using the @Issue annotation)">&#9432; </b><b>Tests that should Pass:</b>&nbsp0</font>&nbsp|
+        <h5><b title="&#9432; Issues are problems that may relate to the tests and should be investigated further to open or close bugs; Issues are divided between the three following categories. (directly related to the @Issue annotation)">&#9432; </b><b>Total Issues</b>:&nbsp1&nbsp&nbsp[
+            <font style="color:Tomato;"><b title="&#9432; Defining the Failed tests that are not linked to bugs. (need to investigate and if needed, open new bugs and link them to the related tests using the @Issue annotation)">&#9432; </b><b>Tests that should Pass:</b>&nbsp1</font>&nbsp|
             <font style="color:Orange;"><b title="&#9432; Defining the Passed tests that are already linked to open bugs. (need to investigate and remove the @Issue annotation and close the bug as the bug should be aready resolved)">&#9432; </b><b>Tests Resolved:</b>&nbsp0</font>&nbsp|
             <font style="color:MediumSeaGreen;"><b title="&#9432; Defining the Failed tests that are already linked to open bugs (using the @Issue annotation).">&#9432; </b><b>Tests that Fail as Expected:</b>&nbsp0</font>&nbsp]
         </h5>
@@ -316,7 +316,7 @@
         <th class="cell100 column6">issue id</th>
         </tr>
         </thead>
-        <tbody id="table"><tr class="row100 body"><td class="cell100 column0">1</td><td class="cell100 column1"></td><td class="cell100 column2">GuiTests.LoginUserTest</td><td class="cell100 column3">Login User with Incorrect email and password</td><td class="cell100 column4"></td><td class="cell100 column5">&#9989; PASSED</td><td class="cell100 column6"></td></tr></tbody>
+        <tbody id="table"><tr class="row100 body"><td class="cell100 column0">1</td><td class="cell100 column1"></td><td class="cell100 column2">GuiTests.LoginUserTest</td><td class="cell100 column3">Login User with correct email and password</td><td class="cell100 column4">Assertion "ValidateElementAttribute" FAILED. Expected "Value Should be 'Ahmed' for the 'text' attribute, element locator 'By.xpath: //b[contains(.,'Ahmed')]'" and Actual "Failed to read the desired element attribute". Comparison Type "CONTAINS". Validation Type "POSITIVE". Root cause: "org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {"method":"xpath","selector":"//b[contains(.,'Ahmed')]"}"</td><td class="cell100 column5">&#10060; FAILED</td><td class="cell100 column6"></td></tr></tbody>
         </table>
         <div class="ps__rail-x" style="left: 0px; bottom: 0px;"><div class="ps__thumb-x" tabindex="0" style="left: 0px; width: 0px;"></div></div></div>
         <br>
